# QKeyPie

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  home-module.nix
src/: actions.rs  config.rs  controller.rs  events.rs  main.rs  model.rs  server.rs  state.rs
