[package]
name = "qkey_pie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
hidapi = "2.4.1"
rocket = { version = "0.5.0", features = ["json"] }
tokio = "1.34.0"
xencelabs-quick-keys = "0.2.1"
