[package]
name = "qkeypie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
enigo = { version = "0.2.0-rc2", features = ["serde"] }
hidapi = "2.4.1"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
xencelabs-quick-keys = "0.2.1"
