[package]
name = "qkeypie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
enigo = { version = "0.2.0-rc2", features = ["serde"] }
hidapi = "2.4.1"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["tokio", "server-auto", "http1"] }
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xencelabs-quick-keys = { version = "0.3.2", features = ["serde"] }
